apps/base/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: ollama
  labels:
    app: ollama
spec:
  ports:
    - port: 11434
      protocol: TCP
      targetPort: 11434
  selector:
    app: ollama
  type: ClusterIP
